# NDK

app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/kang/ndk/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/cpp/subdir/: CMakeLists.txt  subdir-lib.cpp
app/src/main/java/com/kang/ndk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/kang/ndk/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
